	  optional "built-in" application.
	* sched/irq_attach.c:  Fix an issue with disabling interrupts when they are
	  detached.  For the PIC32, this can't be done because there is a 1-to-many
	  relationship between vector numbers and interrupt numbers or different.
	  Added a new configuration option CONFIG_ARCH_VECNOTIRQ to at least flag
	  the architectures that have this issue and to (at least) avoid doing
	  something too wrong.
	* drivers/can.c:  Fix a test for buffer full in the generic, "upper half",
	  can driver.
	* arch/arm/src/lm3s: Add support for the LM3S6432S2E (Contributed by Mike Smith)
	* configs/lm3s6432-s2:  Add support for the TI RDK-S2E (LM3S6432S2E) board
	  (Contributed by Mike Smith)
	* configs/stm3240g-eval/src: Add APIs support to support user access to the
	  LEDs
	* arch/arm/src/lpc17xx/lpc17_can.c: Add logic to change the CAN bit rate based
	  on the NuttX configuration.
	* arch/arm/src/lpc17xx/lpc17_can.c: PCLK divisor is now a configuration
	  option.
	* arch/arm/src/stm32/stm32_serial.c and stm32_lowputc.c:  Support for
	  UART4-5 and USART6 added by Mike Smith.  Also includes a more flexible
	  way of managing UART pin configurations.
	* include/nuttx/pwm.h, drivers/pwm.c, arch/arm/src/stm32/stm32_pwm.c:  Add
	  support for pulse count in order to better support stepper motors.
	* arch/arm/src/stm32/stm32_dumpgpio.c: Checking wrong register to see if
	  GPIO is enabled.  Also not adding the GPIO base address to several offsets.
	* configs/stm32f4discovery:  Port to the STMicro STM32F4Discovery board
	  (Contributed by Mike Smith).
	* fs/fat/fs_fat32util.c:  On a failure to recognize a FAT file system, the
	  mount logic should return -EINVAL, not -ENODEV.
	* arch/arm/src/stm32/stm32_tim.c:  Support for STM32 F4 32-bit timers
	  (Contributed by Mikhail Bychek)
	* lib/stdio/lib_vsprintf.c:  Add support for fixed-size fields with floating
	  point numbers (Contributed by Mikhail Bychek)

6.15 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>