@@ -53,7 +53,7 @@
       <li><a href="http://www.2g-eng.com" target="top">2G Engineering</a></li>
       <li><a href="http://isotel.eu/Home/" target="top">ISOTEL Research</a></li>
       <li><a href="http://www.dspworks.in/" target="top">DSPWorks</a></li>
-      <li><a href="http://www.nx-engineering.com/products.html" target="top">NXWidgets</a></li>
+      <li><a href="http://www.nx-engineering.com/products/" target="top">NXWidgets</a></li>
   </tr>
   <tr>
     <td colspan="2" align="center" valign="top">
